--- a/src/main/webapp/WEB-INF/css/new_login.css
+++ b/src/main/webapp/WEB-INF/css/new_login.css
@@ -35,11 +35,11 @@
 
 .input_login {
     /*width: 95%;*/
-    /*height: 36px !important;*/
+    height: 36px !important;
     /*line-height: 36px !important;*/
-    /*text-indent: 40px;*/
+    text-indent: 40px;
     width: 368px;
-    height: 42px;
+    /*height: 42px;*/
     background: #FFFFFF;
     border: 1px solid #D6D6D6;
     border-radius: 3px;
@@ -61,6 +61,7 @@
     font-weight: 400;
     color: #FFFFFF;
     line-height: 36px;
+    border: none;
 }
 
 .LoginScreen .center, .LoginScreen .center-small, .SplashScreen .center, .SplashScreen .center-small, .ErrorScreen .center, .ErrorScreen .center-small {
@@ -103,77 +104,109 @@
 }
 
 
-
-.center-small .LoginBox{
-    width:100%;height:auto;overflow:hidden;padding:0;
+.center-small .LoginBox {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    padding: 0;
 }
-.LoginScreenImage{
+
+.LoginScreenImage {
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .LoginScreen .center-small, .SplashScreen .center-small, .ErrorScreen .center-small {
-    left: 0;margin:0;
+    left: 0;
+    margin: 0;
     overflow: visible;
     position: static;
     top: 0;
     z-index: 11;
-    width:260px;height:318px;padding:20px;background:#fff;
+    width: 260px;
+    height: 318px;
+    padding: 20px;
+    background: #fff;
 }
-.center-small .LoginBoxForm{
-    width:100%;
+
+.center-small .LoginBoxForm {
+    width: 100%;
 }
-.center-small .input_login{
+
+.center-small .input_login {
     width: 252px;
 }
-.center-small .LoginSubmit{
-    width:100%;border:none;
+
+.center-small .LoginSubmit {
+    width: 100%;
+    border: none;
 }
-.ImgLoginBanner{
+
+.ImgLoginBanner {
     /*background:url('http://localhost:63342/zimbra-login/src/main/webapp/WEB-INF/img/BILL-JC@2X.PNG') no-repeat 10px center;*/
 
-    background:url('@AppContextPath@/img/BILL-JC@2x.png') no-repeat 10px center;
-
-    display:block;
-    background-size:186px;
-    width:100%;height:50px;
-}
-.LoginScreen, .SplashScreen, .ErrorScreen{
-    position:relative;
-}
-h1{
-    margin:0;
+    background: url('@AppContextPath@/img/BILL-JC@2x.png') no-repeat 10px center;
+    display: block;
+    background-size: 186px;
+    width: 100%;
+    height: 50px;
 }
 
-.flex-box{
-    width:100%;height:100%;display:flex;flex-direction: column;
-}
-.flex-box-1{
-    height:50px;
-}
-.flex-box-2{
-    flex:1;
-}
-.flex-box-3{
-    height:60px;text-align:center;padding:20px 0;line-height:20px;
+.LoginScreen, .SplashScreen, .ErrorScreen {
+    position: relative;
+    background: none;
 }
 
-.Footer-small #ZLoginNotice{
-    display:block;
+h1 {
+    margin: 0;
 }
-.legalNotice-small{
-    padding:0 20px;
+
+.flex-box {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
-.center-small .LoginTile{
-    padding-top:0;padding-bottom:10px;font-size:16px;
+
+.flex-box-1 {
+    height: 50px;
 }
+
+.flex-box-2 {
+    flex: 1;
+}
+
+.flex-box-3 {
+    height: 60px;
+    text-align: center;
+    padding: 20px 0;
+    line-height: 20px;
+}
+
+.Footer-small #ZLoginNotice {
+    display: block;
+}
+
+.legalNotice-small {
+    padding: 0 20px;
+}
+
+.center-small .LoginTile {
+    padding-top: 0;
+    padding-bottom: 10px;
+    font-size: 16px;
+}
+
 .LoginSubmit {
-    -webkit-appearance : none ;/*解决ios上按钮的圆角问题*/
-    border-radius: 0;/*解决ios上输入框圆角问题*/
+    -webkit-appearance: none; /*解决ios上按钮的圆角问题*/
+    border-radius: 0; /*解决ios上输入框圆角问题*/
 }
-.version_margintop{
-    height:60px;
+
+.version_margintop {
+    height: 60px;
 }
-.center-small .version_margintop{
-    height:20px;
+
+.center-small .version_margintop {
+    height: 20px;
 }
